--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,151 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  /* border: 1px solid black; */
+}
+button{
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+li{
+  list-style-type: none;
+}
+a {
+  color: inherit;
+  text-decoration: inherit; 
+}
+nav ul{
+  display:flex;
+  justify-content: space-around;
+  align-items:center;
+  height: 20vh;
+  animation: fadein 1s 2s forwards;
+  opacity: 0;
+}
+.logo svg{
+  width: 20vw;
+  min-width: 150px;
+  height: 50vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#right{
+  animation: rotate 1s forwards;
+  transform-origin: 100% 0%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#left{
+  opacity: 0;
+  animation: rotate 0.5s forwards, fadein 0.5s forwards;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home{
   display: flex;
+  flex-wrap: wrap;
+}
+
+.logo, .intro {
+  width:50%;
+  display:flex;
   flex-direction: column;
+  align-items:center;
+  justify-content:center;
+  height: 80vh;
+}
+.intro{
+  width:40%;
+  animation: fadein 0.5s 0.5s forwards;
+  opacity: 0;
+}
+.intro button{
+  margin: 30px;
+}
+.works{
+  margin: 0 10%;
+  display:flex;
+  flex-wrap: wrap;
+  animation: fadein 0.5s forwards;
+  opacity: 0;
+}
+article{
+  width:40%;
+  text-align: center;
+  padding:5%;
+  background-color: #02015a32;
+  margin: 5%;
+}
+.articleimage{
+  width:50%;
+}
+.skills{
+  margin: 0 10%;
+  display:flex;
+  flex-direction: column;
+  height: 80vh;
+  align-items:center;
+  justify-content: space-evenly;
+  text-align: center;
+  animation: fadein 0.5s forwards;
+  opacity: 0;
+}
+.contact{
+  margin: 0 10%;
+  display:flex;
+  flex-direction: column;
+  height: 80vh;
+  align-items:center;
+  justify-content: space-evenly;
+  animation: fadein  0.5s forwards;
+  opacity: 0;
+}
+.icons{
+  display: flex;
+  width:100%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around
+}
+button:hover, article:hover, i:hover{
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 700px) {
+  .home{
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:center;
   }
-  to {
-    transform: rotate(360deg);
+  article{
+    width:100%;
+    text-align: center;
+    padding:5%;
+    background-color: #02015a32;
+    margin: 5%;
+  }
+  .logo, .intro{
+    width:80%
+  }
+}
+
+
+@keyframes rotate{
+  from{
+      transform: rotateZ(-45deg);
+  }
+  to{
+      transform: rotateZ(0deg);
+  }
+}
+@keyframes fadein{
+  from{
+      opacity: 0;
+  }
+  to{
+      opacity: 1;
   }
 }
